<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameEd"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/person_add_24"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toTopOf="parent"
        >

    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ageEd"
        android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/age_new"
        android:inputType="number"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/nameEd">

    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weightEd"
        android:hint="@string/weight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/age_new"
        android:inputType="numberDecimal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/ageEd">

    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/consNew"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noti"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

        </androidx.appcompat.widget.AppCompatTextView>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintLeft_toRightOf="@+id/noti"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </CheckBox>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notiEnable"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/urlEd"
        android:hint="@string/url"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/notifications"
        android:inputType="textUri"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/notiEnable">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/weightEd"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/Gender"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton_Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Male"
                android:textSize="22sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton_Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:textSize="22sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBt"
        app:layout_constraintTop_toBottomOf="@+id/urlEd"
        android:text="@string/Save"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>




</androidx.constraintlayout.widget.ConstraintLayout>